<resources>
    <string name="app_name">EcoShare</string>
    <string name="welcome_to_ecoshare">Welcome to EcoShare !</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_do_not_have_an_account">You do not have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name </string>
    <string name="phone_number">Phone Number</string>
    <string name="create_an_account">Create an account</string>
    <string name="my_reports">MY REPORTS</string>
    <string name="select_all_the_categories_that_apply_to_your_report">Select all the categories that apply to your report:</string>
    <string name="description">Description:</string>
    <string name="photo">Photo:</string>
    <string name="other_characteristics">Other characteristics:</string>
    <string name="report_it">Report IT!</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_to_ecoshar">WELCOME TO ECOSHARE !</string>
    <string name="reporting_on">REPORTING ON</string>
    <string name="register_as_anonymous_user">Register as anonymous user?</string>
    <string name="first_name">First Name</string>
    <string name="report_as_an_anonymous_user">Report as an anonymous user?</string>
    <string name="describe_the_problem">Describe the problem!</string>
    <string name="select_categories">Select Categories</string>
    <string name="weight_approximately">Weight approximately (ex: 2 kg)</string>
    <string name="impact_ex_it_has_an_awful_smell">Impact ( ex: It has an awful smell)</string>
    <string name="take_photo">Take photo</string>
    <string name="location">Location: </string>
</resources>